[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/GeoLang/terravista"
authors = ["TileTopia <tiletopia@proton.me>"]
description = "Mobile map SDK — offline tiles, vector rendering, and navigation for iOS/Android"
rust-version = "1.85"

[workspace.dependencies]
terravista-core = { path = "crates/terravista-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
